:art: Header and menu created with css style

--- a/home.html
+++ b/home.html
@@ -5,10 +5,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <title>Document</title>
+    <title>Siman SV</title>
 </head>
 
 <body>
+
+    <header>
+        <img src="assets/logo.png" alt="siman logo">
+    </header>
+
+    <nav>
+        <ul class="menu">
+            <li><a href="#">Inicio</a></li>
+            <li><a href="#">Promociones</a></li>
+            <li><a href="#">Exclusivos</a></li>
+            <li><a href="#">Ofertas</a></li>
+        </ul>
+    </nav>
 
 </body>
 
