--- a/home.html
+++ b/home.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -9,6 +9,19 @@
 </head>
 
 <body>
+
+    <div class="registration">
+        <div class="information">
+            <img src="assets/siman.png" alt="siman" style="width: 150px; height: 75px;">
+        </div>
+        <div class="information2">
+            <img src="assets/rebajas.png" alt="rebajas">
+        </div>
+        <div class="logo">
+            <a href="#"><img src="assets/signin.png" alt="Login" style="width: 50px; height: 50px;"></a>
+            <a href="#"><img src="assets/cart.png" alt="Cart" style="width: 50px; height: 50px;"></a>
+        </div>
+    </div>
 
     <header>
         <img src="assets/logo.png" alt="siman logo">
@@ -22,6 +35,13 @@
             <li><a href="#">Ofertas</a></li>
         </ul>
     </nav>
+
+    <main class="container">
+
+
+    </main>
+
+
 
 </body>
 
