:lipstick: Banner, grids and footer added to the project

--- a/home.html
+++ b/home.html
@@ -18,7 +18,7 @@
             <img src="assets/rebajas.png" alt="rebajas">
         </div>
         <div class="logo">
-            <a href="#"><img src="assets/signin.png" alt="Login" style="width: 50px; height: 50px;"></a>
+            <a href="pages/registration.html"><img src="assets/signin.png" alt="Login" style="width: 50px; height: 50px;"></a>
             <a href="#"><img src="assets/cart.png" alt="Cart" style="width: 50px; height: 50px;"></a>
         </div>
     </div>
@@ -30,7 +30,7 @@
     <nav>
         <ul class="menu">
             <li><a href="#">Inicio</a></li>
-            <li><a href="#">Promociones</a></li>
+            <li><a href="pages/promotions.html">Promociones</a></li>
             <li><a href="#">Exclusivos</a></li>
             <li><a href="#">Ofertas</a></li>
         </ul>
@@ -38,10 +38,64 @@
 
     <main class="container">
 
+        <section class="main-banner">
+            <img src="assets/wallpaper.png" alt="Banner promocional">
+        </section>
 
+        <section class="product-section">
+            <div class="product-card">
+                <img src="assets/iphone.jpg" alt="iphone">
+                <h3>iPhone 13</h3>
+                <p>$799.99</p>
+            </div>
+            <div class="product-card">
+                <img src="assets/smartv.jpg" alt="smartv">
+                <h3>Samsung – Smart TV LED de 55″ Serie 7 Ultra HD 4K</h3>
+                <p>$1199.99</p>
+            </div>
+            <div class="product-card">
+                <img src="assets/cosmetico.jpg" alt="cosmetico">
+                <h3>Nars Cosmetics: sus mejores productos de maquillaje</h3>
+                <p>$149.99</p>
+            </div>
+            <div class="product-card"><a href="pages/promotions.html">
+                <img src="assets/lavadora.jpg" alt="lavadora">
+                <h3>Samsung WA50R5400AV 5.0 pies</h3>
+                <p>$499.99</p>
+                </a>
+            </div>
+        </section>
+
+        <div class="info-bar">
+            <p>🔥 Envío gratis en compras mayores a $50. ¡Solo por hoy!</p>
+        </div>
     </main>
 
-
+    <footer class="footer">
+        <div class="footer-content">
+            <div class="footer-brand">
+                <img src="assets/logo.png" alt="Siman logo">
+                <p>Siman El Salvador</p>
+            </div>
+            <div class="footer-links">
+                <ul>
+                    <li><a href="#">Inicio</a></li>
+                    <li><a href="pages/promotions.html">Promociones</a></li>
+                    <li><a href="#">Ofertas</a></li>
+                </ul>
+            </div>
+            <div class="footer-links">
+                <ul>
+                    <li><a href="#">Contacto</a></li>
+                    <li><a href="#">Ubicaciones</a></li>
+                    <li><a href="#">Ayuda</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <p>&copy; 2025 Siman El Salvador. Todos los derechos reservados.</p>
+        </div>
+    </footer>
 
 </body>
 
