:lipstick: Adding login screen and add to all devices, :bug: also fix some issues with imagesn size at promotions

--- a/home.html
+++ b/home.html
@@ -59,7 +59,7 @@
                 <p>$149.99</p>
             </div>
             <div class="product-card"><a href="pages/promotions.html">
-                <img src="assets/lavadora.jpg" alt="lavadora">
+                <img src="assets/lavadora1.jpg" alt="lavadora">
                 <h3>Samsung WA50R5400AV 5.0 pies</h3>
                 <p>$499.99</p>
                 </a>
