--- a/pages/promotions.html
+++ b/pages/promotions.html
@@ -41,9 +41,9 @@
     <main class="container product-view">
         <div class="product-wrapper">
             <div class="product-gallery">
-                <div class="gallery-card"><img src="../assets/lavadora.jpg" alt="Producto 1"></div>
-                <div class="gallery-card"><img src="../assets/lavadora2.jpg" alt="Producto 2"></div>
-                <div class="gallery-card"><img src="../assets/lavadora3.jpg" alt="Producto 3"></div>
+                <div class="gallery-card"><img src="../assets/lavadora.jpg" alt="Producto 1"/></div>
+                <div class="gallery-card"><img src="../assets/lavadora2.jpg" alt="Producto 2"/></div>
+                <div class="gallery-card"><img src="../assets/lavadora3.jpg" alt="Producto 3"/></div>
             </div>
             <div class="product-info">
                 <h2>Samsung WA50R5400AV 5.0 pies</h2>
