--- a/pages/promotions.html
+++ b/pages/promotions.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Producto | Siman</title>
+    <link rel="icon" type="image/png" href="assets/siman1.jpg"/>
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/promotions.css">
 </head>
