--- a/pages/registration.html
+++ b/pages/registration.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Iniciar Sesión | Siman</title>
+    <link rel="icon" type="image/png" href="assets/siman1.jpg"/>
     <link rel="stylesheet" href="../css/registration.css">
 </head>
 
