--- a/pages/registration.html
+++ b/pages/registration.html
@@ -20,6 +20,7 @@
             <input type="email" placeholder="Correo electrónico" required>
             <input type="password" placeholder="Contraseña" required>
             <button type="submit">Ingresar</button>
+            <a href="#" class="register-btn">Registrarme</a>
             <a href="#">¿Olvidaste tu contraseña?</a>
         </form>
     </div>
