:bookmark: Finished version 1.0

--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" href="assets/siman1.jpg"/>
+    <link rel="icon" type="image/png" href="assets/siman1.jpg" />
     <link rel="stylesheet" href="css/style.css">
     <title>Siman SV</title>
 </head>
@@ -19,7 +19,8 @@
             <img src="assets/rebajas.png" alt="rebajas">
         </div>
         <div class="logo">
-            <a href="pages/registration.html"><img src="assets/signin.png" alt="Login" style="width: 50px; height: 50px;"></a>
+            <a href="pages/registration.html"><img src="assets/signin.png" alt="Login"
+                    style="width: 50px; height: 50px;"></a>
             <a href="#"><img src="assets/cart.png" alt="Cart" style="width: 50px; height: 50px;"></a>
         </div>
     </div>
@@ -60,9 +61,9 @@
                 <p>$149.99</p>
             </div>
             <div class="product-card"><a href="pages/promotions.html">
-                <img src="assets/lavadora1.jpg" alt="lavadora">
-                <h3>Samsung WA50R5400AV 5.0 pies</h3>
-                <p>$499.99</p>
+                    <img src="assets/lavadora1.jpg" alt="lavadora">
+                    <h3>Samsung WA50R5400AV 5.0 pies</h3>
+                    <p>$499.99</p>
                 </a>
             </div>
         </section>
